// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProjectItem component should render correctly 1`] = `
<View
  accessibilityLabel="sidebar-project-undefined"
  nativeID="sidebar-project--LcRVRo6mhbC0oXCcZ2F-0"
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "space-between",
            "paddingLeft": 24,
          },
          Object {
            "backgroundColor": "#F5F5F5",
          },
          false,
          Object {
            "paddingLeft": 17,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 100,
                "height": 22,
                "justifyContent": "center",
                "marginRight": 10,
                "width": 22,
              },
              Object {
                "backgroundColor": "#47A3FF",
                "opacity": 0.4,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
</View>
`;

exports[`ProjectItem component should render correctly when it is the selected project 1`] = `
<View
  accessibilityLabel="sidebar-project-undefined"
  nativeID="sidebar-project--LcRVRo6mhbC0oXCcZ2F-0"
>
  <View
    accessible={true}
    focusable={true}
    isTVSelectable={true}
    onClick={[Function]}
    onResponderGrant={[Function]}
    onResponderMove={[Function]}
    onResponderRelease={[Function]}
    onResponderTerminate={[Function]}
    onResponderTerminationRequest={[Function]}
    onStartShouldSetResponder={[Function]}
    style={
      Object {
        "opacity": 1,
      }
    }
  >
    <View
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
      style={
        Array [
          Object {
            "alignItems": "center",
            "flexDirection": "row",
            "height": 56,
            "justifyContent": "space-between",
            "paddingLeft": 24,
          },
          Object {
            "backgroundColor": "#D6EBFF",
          },
          false,
          Object {
            "paddingLeft": 17,
          },
        ]
      }
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "flex": 1,
            "flexDirection": "row",
          }
        }
      >
        <View
          style={
            Array [
              Object {
                "alignItems": "center",
                "borderRadius": 100,
                "height": 22,
                "justifyContent": "center",
                "marginRight": 10,
                "width": 22,
              },
              Object {
                "backgroundColor": "#47A3FF",
                "opacity": 1,
              },
            ]
          }
        />
      </View>
    </View>
  </View>
  <ProjectSectionList
    projectData={
      Object {
        "color": "#39CCCC",
        "id": "-LcRVRo6mhbC0oXCcZ2F",
        "index": 0,
        "name": "Another one",
        "userIds": Array [
          "UUKU61Jc7ET8zE5ncN8F61HE19y1",
        ],
      }
    }
  />
</View>
`;
